# YukiSU

./: .clang-tidy  .gitignore  .gitmodules  repack_apk.py
.githooks/: pre-commit
.github/workflows/: build-hymofs-lkm.yml  build-kasumi-lkm.yml  build-lkm.yml  build-manager.yml  build-su.yml  clang-tidy.yml  ddk-hymofs-lkm.yml  ddk-lkm.yml  hymofs-lkm.yml  kasumi-lkm.yml  ksud-cpp.yml  ksud.yml  ksuinit-cpp.yml  ksuinit.yml  libzygisk.yml  release.yml  shellcheck.yml  su.yml  yukizygisk.yml
build_ksud/: CMakeCache.txt  Makefile  cmake_install.cmake  ksud
cmake/: ClangTidy.cmake
docs/: README.md  ramdisk-editor-protocol.md
docs/guide/: how-to-integrate.md  installation.md
docs/ja/: README.md
docs/ru/: README.md
docs/tr/: README.md
docs/zh/: README.md
kernel/: .clang-format  Kbuild  Kconfig  Makefile  allowlist.c  allowlist.h  apk_sign.c  apk_sign.h  app_profile.c  app_profile.h  arch.h  dynamic_manager.c  dynamic_manager.h  event_queue.c  feature.c  feature.h  file_wrapper.c  file_wrapper.h  kernel_compat.c  kernel_compat.h  kernel_umount.c  kernel_umount.h  kp_hook.c  kp_util.c  ksu.c  ksu.h  ksud.c  ksud.h  ksuinit.c  lsm_hook.c  lsm_hooks.c  manager.h  manager_sign.h  manual_hook_check.h  manual_su.c  manual_su.h  pkg_observer.c  pkg_observer_defs.h  seccomp_cache.c  seccomp_cache.h  (+32 more)
kernel/core/: init.c
kernel/feature/: adb_root.c  adb_root.h  kernel_umount.c  kernel_umount.h  selinux_hide.c  selinux_hide.h  sucompat.c  sucompat.h  sulog.c  zygote_ctl.c  zygote_ctl.h  zygote_nl.c  zygote_nl.h  zygote_orch.c  zygote_orch.h  zygote_probe.c  zygote_probe.h
kernel/hook/: lsm_hook.c  lsm_hook.h  patch_memory.h  setuid_hook.c  setuid_hook.h  (+7 more)
manager/: build.gradle.kts  gradle.properties  settings.gradle.kts
manager/app/src/main/cpp/: CMakeLists.txt  adbroot.cc  jni.c  ksu.c  ksu.h  legacy.c  murasaki_binder_client.cpp  prelude.h
scripts/: build.bat  build.ps1  build.sh  ddk.mk
uapi/: app_profile.h  feature.h  ksu.h  selinux.h  sulog.h  supercall.h  yukizygisk.h
userspace/ksud/: .gitignore  CMakeLists.txt
userspace/ksud-cpp/: CMakeLists.txt
userspace/ksud-cpp/src/: assets.cpp  assets.hpp  cli.cpp  cli.hpp  debug.cpp  debug.hpp  defs.cpp  defs.hpp  init_event.cpp  init_event.hpp  kpm.cpp  kpm.hpp  log.cpp  log.hpp  restorecon.cpp  restorecon.hpp  su.cpp  su.hpp  umount.cpp  umount.hpp  utils.cpp  utils.hpp
userspace/ksud-cpp/src/boot/: apk_sign.cpp  apk_sign.hpp  boot_patch.cpp  boot_patch.hpp
userspace/ksud-cpp/src/core/: feature.cpp  feature.hpp  ksucalls.cpp  ksucalls.hpp  susfs.cpp  susfs.hpp
userspace/ksud-cpp/src/module/: metamodule.cpp  metamodule.hpp  module.cpp  module.hpp  module_config.cpp  module_config.hpp
userspace/ksud-cpp/src/profile/: profile.cpp  profile.hpp
userspace/ksud-cpp/src/sepolicy/: sepolicy.cpp  sepolicy.hpp
userspace/ksud/aidl/io/murasaki/: IHymoFsService.aidl  IKernelService.aidl  IMurasakiService.aidl
userspace/ksud/assets/: installer.sh  murasaki_sepolicy.rule
userspace/ksud/docs/: clang-tidy-remaining.md
userspace/ksud/scripts/: embed_assets.py  generate_version.py  sync_hymo.py
userspace/ksud/src/: assets.cpp  assets.hpp  boot_patch.rs  cli.cpp  cli.hpp  debug.cpp  debug.hpp  defs.cpp  defs.hpp  dynamic_manager.cpp  dynamic_manager.hpp  init_event.cpp  init_event.hpp  kernelsu_loader.cpp  kernelsu_loader.hpp  late_load.cpp  late_load.hpp  log.cpp  main.cpp  property_monitor.cpp  property_monitor.hpp  restorecon.hpp  su.cpp  su.hpp  sulog.cpp  sulog.hpp  umount.cpp  umount.hpp  utils.cpp  utils.hpp  yukizygisk_snapshot.cpp  yukizygisk_snapshot.hpp
userspace/ksud/src/binder/: binder_wrapper.hpp  murasaki_access.cpp  murasaki_access.hpp  murasaki_binder.cpp  murasaki_binder.hpp  murasaki_ipc.cpp  murasaki_service.hpp  shizuku_service.cpp  shizuku_service.hpp
userspace/ksud/src/boot/: apk_sign.cpp  apk_sign.hpp  boot_patch.cpp  ramdisk_editor.cpp  ramdisk_editor.hpp  tools.cpp  tools.hpp
userspace/ksud/src/core/: assets.cpp  assets.hpp  feature.cpp  hide_bootloader.cpp  json.hpp  ksucalls.cpp  ksucalls.hpp  restorecon.cpp  restorecon.hpp
userspace/ksud/src/flash/: flash_ak3.cpp  flash_ak3.hpp  flash_partition.cpp  flash_partition.hpp
userspace/ksud/src/hymo/: defs.hpp  hymo_cli.cpp  hymo_cli.hpp  hymo_defs.hpp  hymo_main.cpp  hymo_utils.cpp  utils.cpp  utils.hpp
userspace/ksud/src/hymo/conf/: config.cpp  config.hpp
userspace/ksud/src/hymo/core/: executor.cpp  executor.hpp  inventory.cpp  inventory.hpp  lkm.cpp  lkm.hpp  modules.cpp  modules.hpp  planner.cpp  planner.hpp  state.cpp  state.hpp  storage.cpp  sync.cpp  user_rules.cpp  user_rules.hpp  webui.cpp
userspace/ksud/src/hymo/mount/: hymo_magic.h  hymofs.cpp  hymofs.hpp  hymofs_uapi.h  kasumi.cpp  kasumi.hpp  kasumi_uapi.h  magic.cpp  mount_utils.cpp  overlay.cpp  partition_utils.cpp
userspace/ksud/src/magica/: magica.cpp  magica.hpp
userspace/ksud/src/magisk_compat/: msud.cpp  su_magic.cpp  su_protocol.cpp
userspace/ksud/src/module/: metamodule.cpp  metamodule.hpp  module.cpp  module.hpp  module_config.cpp
userspace/ksud/src/profile/: profile.cpp
userspace/ksud/src/sepolicy/: sepolicy.cpp
userspace/ksud/src/zygisk/: zygisk.cpp  zygisk.hpp
userspace/ksud/src/zygisk/ptracer/: injector.cpp  injector.hpp  logging.hpp  ptrace_utils.cpp  ptrace_utils.hpp  types.hpp
userspace/ksuinit/: .gitignore  CMakeLists.txt
userspace/ksuinit/src/: init.cpp  init.hpp  init.rs  loader.cpp  loader.hpp  log.cpp  log.hpp  main.cpp
userspace/libzygisk/: CMakeLists.txt  README.md  build.sh
userspace/libzygisk/src/injector/: entry.cpp  hook_minimal.cpp
userspace/su/: CMakeLists.txt
userspace/su/jni/: Android.mk  su.c
userspace/su/src/: su_client.cpp
userspace/zygisk/core/: CMakeLists.txt
userspace/zygisk/core/src/: armv7_placeholder.c  art_method.hpp  core.cpp  hook.cpp  hook.hpp  inline_hook.hpp  log.hpp  self_unmap.S  solist.cpp  solist.hpp  yukilinker.cpp  yukilinker.hpp  yukilinker_tlsdesc.S  yukizncore.cpp
userspace/zygisk/loader/: CMakeLists.txt
userspace/zygisk/loader/src/: solist.cpp  solist.hpp  zloader.cpp
(+220 files in other folders)
